replaced menu icon

--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -1,9 +1,9 @@
 ---
-
+import { Menu } from "lucide-astro";
 ---
 
 <span
   id="hamburger-menu"
   class="relative top-[-2px] block text-xl leading-none sm:hidden"
-  title="Menu">🍔</span
+  title="Menu"><Menu /></span
 >
