attempt #2 to fix mobile menu display issue in firefox

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,3 +1,4 @@
+
 ---
 import siteConfig, { type Link } from "../site.config";
 import Hamburger from "./Hamburger.astro";
@@ -64,11 +65,11 @@ const { activePage } = Astro.props;
       display: flex;
       flex-direction: column;
       gap: 0.5rem;
-      justify-content: end;
+      justify-content: start;
       position: absolute;
       z-index: 10;
       opacity: 1;
-      padding: 1rem 2rem;
+      padding: 4rem 2rem 1rem;
       width: 100vw;
       top: 0;
       height: 100vh;
