updated to use pagescms

--- a/src/pages/listings/[slug].astro
+++ b/src/pages/listings/[slug].astro
@@ -357,7 +357,9 @@ const badgeClass =
         >
           Get in touch with us for more details and site visits
         </p>
-  <a href={withBase("/contact")} class="button-link space-btn-filled">Contact Us</a>
+        <a href={withBase("/contact")} class="button-link space-btn-filled"
+          >Contact Us</a
+        >
       </section>
     </article>
   </div>
